--- a/TecBetsCore/pom.xml
+++ b/TecBetsCore/pom.xml
@@ -18,7 +18,10 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
+	<properties>
+  		<sonar.organization>vandoaderson</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
