--- a/TecBetsCore/pom.xml
+++ b/TecBetsCore/pom.xml
@@ -21,6 +21,7 @@
 	<properties>
   		<sonar.organization>vandoaderson</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectBaseDir>.</sonar.projectBaseDir>
 	</properties>
 	<dependencies>
 		<dependency>
